--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -13,8 +13,6 @@ services:
       - POSTGRES_DB=rentx
     volumes: 
       - pgdata:/data/postgres
-    networks:
-      - rentx
 
   app:
     build: .
@@ -23,8 +21,10 @@ services:
       - 3333:3333
     volumes: 
       - .:/usr/app
-    networks:
-      - rentx
+    links: 
+      - database
+    depends_on: 
+      - database
 
 volumes: 
   pgdata:
