--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -6,12 +6,12 @@
   "password": "ignite",
   "database": "rentx",
   "entities": [
-    "./src/modules/**/entities/**.ts"
+    "./src/modules/**/infra/typeorm/entities/**.ts"
   ],
   "migrations": [
-    "./src/database/migrations/*.ts"
+    "./src/shared/infra/typeorm/migrations/*.ts"
   ],
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/shared/infra/typeorm/migrations"
   }
 }
