--- a/backend/package.json
+++ b/backend/package.json
@@ -10,13 +10,17 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@types/handlebars": "^4.1.0",
+    "@types/nodemailer": "^6.4.1",
     "bcrypt": "^5.0.1",
     "csv-parse": "^4.15.3",
     "dayjs": "^1.10.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
