feat: :ambulance: upload  files to an AWS
Enviando arquivos para um AWS

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,17 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
-    "@types/handlebars": "^4.1.0",
-    "@types/nodemailer": "^6.4.1",
+    "aws-sdk": "^2.888.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
     "csv-parse": "^4.15.3",
     "dayjs": "^1.10.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
@@ -32,9 +34,12 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/faker": "^5.5.0",
+    "@types/handlebars": "^4.1.0",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.5",
+    "@types/nodemailer": "^6.4.1",
     "@types/pg": "^7.14.11",
     "@types/reflect-metadata": "^0.1.0",
     "@types/supertest": "^2.0.11",
