--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,8 @@ jobs:
       
       - name: Build
         run: yarn build
-      
-      - name: Copy File Via SSH Password
-        uses: appleboy/scp-action@master
+        
+      - uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
@@ -35,6 +34,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
           target: "test"
-      
+
 
     
