--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,11 @@ jobs:
       - name: Build
         run: cd backend && yarn build
         
-      - uses: appleboy/scp-action@master
+      - name: Exit Backend
+        run: cd ..
+      
+      - name: Copy File Via SSH Password
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
