--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,6 @@ jobs:
       
       - name: Build
         run: cd backend && yarn build
-        
-      - name: Exit Backend
-        run: cd ..
       
       - name: Copy File Via SSH Password
         uses: appleboy/scp-action@master
@@ -37,7 +34,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
-          target: "app"
+          target: "app/rentex-concessionaire"
 
 
     
