--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,51 +2,24 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ develop ]
 
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  deploy:
+    name: Upping to server
+    runs-on: Upping
     steps:
       - uses: actions/checkout@v2
-      
-      - name: Setup NodeJS
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14.x
-      
-      - name: Install Dependencies
-        run: cd backend && yarn
-      
-      - name: Build
-        run: cd backend && yarn build
-      
-      - name: Copy File Via SSH Password
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_KEY }}
-          source: "., !node_modules"
-          target: "app/rentex-concessionaire"
-          
-      - name: Update API
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            cd ~/app/rentex-concessionaire/backend
-            yarn
-            ./node_modules/.bin/typeorm migration:run
 
+      - name: Build Image
+        run: docker-compose -f docker-compose.yml build --no-cache --force-rm
 
-    
+      - name: Update Image
+        run: docker-compose -f docker-compose.yml up -d 
+
+      - name: Cleanup
+        run: docker image prune -a -f
