--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build Image
-        run: docker-compose -f docker-compose.yml build --no-cache --force-rm
+        run: docker-compose -f docker-compose.yml build --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}  --no-cache --force-rm 
 
       - name: Update Image
         run: docker-compose -f docker-compose.yml up -d 
