--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,7 +13,7 @@ APP_PORT=3333
 FORGOT_MAIL_URL=
 
 ## Storage
-DISK=local
+DISK=local | s3
 
 #Mail
-MAIL_PROVIDER=ethereal
+MAIL_PROVIDER=ethereal | ses
