--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,48 +3,29 @@ version: "3.7"
 services: 
   database:
     image: postgres
-    container_name: database_rentx
+    container_name: databaserentx
     restart: always
+    ports:
+      - 9876:5432
     environment: 
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=ignite
       - POSTGRES_DB=rentx
     volumes: 
       - pgdata:/data/postgres
-    expose:
-      - '5432'
-    networks:
-      - rentx
 
-  server:
-    build: ./backend
-    image: rentxserver
-    container_name: rentxserver
-    restart: always
-    # ENVS
-    expose:
-      - '3333'
-    depends_on: 
-      - database
-    networks:
-      - rentx
-      - proxy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=proxy"
-      - "traefik.http.routers.rentxserver.rule=Host(`apps.tharlysalves.online`) && PathPrefix(`/rentxserver`)"
-      - "traefik.http.routers.rentxserver.entrypoints=websecure"
-      - "traefik.http.routers.rentxserver.tls.certresolver=apps-ssl-resolver"
-      - "traefik.http.routers.rentxserver.service=rentxserver"
-      - "traefik.http.services.rentxserver.loadbalancer.server.port=3333"
+  # server:
+  #   build: .
+  #   container_name: rentx
+  #   ports: 
+  #     - 3333:3333
+  #   volumes: 
+  #     - .:/usr/app
+  #   links: 
+  #     - database
+  #   depends_on: 
+  #     - database
 
 volumes: 
   pgdata:
     driver: local
-
-networks:
-  proxy:
-    external:
-      name: proxy
-  rentx:
-    name: rentx-network
