feat: :sparkles: update script start

--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -6,10 +6,10 @@
   "password": "ignite",
   "database": "rentx",
   "entities": [
-    "./dist/modules/**/infra/typeorm/entities/**.ts"
+    "./dist/modules/**/infra/typeorm/entities/**.js"
   ],
   "migrations": [
-    "./dist/shared/infra/typeorm/migrations/*.ts"
+    "./dist/shared/infra/typeorm/migrations/*.js"
   ],
   "cli": {
     "migrationsDir": "./dist/shared/infra/typeorm/migrations"
