--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,5 +45,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd ~/app/rentex-concessionaire/backend
-            yarn
-            ./node_modules/.bin/typeorm migration:run
+            docker-compose build --no-cache --force-rm
+            docker-compose up -d
+            docker image prune -a -f
