--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,17 +14,17 @@ services:
     volumes: 
       - pgdata:/data/postgres
 
-  # server:
-  #   build: .
-  #   container_name: rentx
-  #   ports: 
-  #     - 3333:3333
-  #   volumes: 
-  #     - .:/usr/app
-  #   links: 
-  #     - database
-  #   depends_on: 
-  #     - database
+  server:
+    build: backend
+    container_name: rentxserver
+    ports: 
+      - 3333:3333
+    volumes: 
+      - .:/usr/app
+    links: 
+      - database
+    depends_on: 
+      - database
 
 volumes: 
   pgdata:
