--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,29 +3,47 @@ version: "3.7"
 services: 
   database:
     image: postgres
-    container_name: databaserentx
+    container_name: rentxdatabase
     restart: always
-    ports:
-      - 9876:5432
+    expose:
+      - '5432'
     environment: 
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=ignite
       - POSTGRES_DB=rentx
     volumes: 
       - pgdata:/data/postgres
+    networks:
+      - rentx
 
   server:
-    build: backend
+    build: ./backend
+    image: rentxserver
     container_name: rentxserver
-    ports: 
-      - 3333:3333
-    volumes: 
-      - .:/usr/app
-    links: 
-      - database
+    restart: always
+    expose: 
+      - '3333'
     depends_on: 
       - database
+    networks:
+      - rentx
+      - proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=proxy"
+      - "traefik.http.routers.rentxserver.rule=Host(`apps.tharlysalves.online`) && PathPrefix(`/rentxserver`)"
+      - "traefik.http.routers.rentxserver.entrypoints=websecure"
+      - "traefik.http.routers.rentxserver.tls.certresolver=apps-ssl-resolver"
+      - "traefik.http.routers.rentxserver.service=rentxserver"
+      - "traefik.http.services.rentxserver.loadbalancer.server.port=3333"
 
 volumes: 
   pgdata:
     driver: local
+
+networks:
+  proxy:
+    external:
+      name: proxy
+  rentx:
+    name: rentx-network
