--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           script: |
+            mv ~/.env ~/app/rentx-concessionaire
             cd ~/app/rentx-concessionaire
             docker-compose build --no-cache --force-rm
             docker-compose up -d
